Отправка уведомлений, пока без персиста.