@@ -7,9 +7,9 @@ import dev.nk7.bot.notifier.core.port.out.MessageService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 
 public class AddNewChatUseCase implements dev.nk7.bot.notifier.core.port.in.AddNewChatUseCase {
 
@@ -32,10 +32,10 @@ public class AddNewChatUseCase implements dev.nk7.bot.notifier.core.port.in.AddN
       messageService.send(chatId.toString(), "Бот уже знает о Вас.");
       return chat.get();
     }
-    final Chat newChat = new Chat(chatId, title, type, ChatStatus.NEW, Collections.emptySet());
+    final Chat newChat = new Chat(chatId, title, type, ChatStatus.APPROVED, Set.of("test"));
     chatRepository.save(newChat);
     log.debug("Created new chat with id {}", chatId);
-    messageService.send(chatId.toString(),"Добро пожаловать в бот для получения уведомлений!");
+    messageService.send(chatId.toString(), "Добро пожаловать в бот для получения уведомлений!");
     return newChat;
   }
 }
